<resources>
    <string name="app_name">TMDBProject</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="person">Person</string>
    <string name="my_favorite">Meus Favoritos</string>
    <string name="details_movie">Detalhes do Filme</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">E-mail</string>
    <string name="profile">Profile</string>
    <string name="username_profile">Username:</string>
    <string name="e_mail_profile">E-mail:</string>
    <string name="password_profile">Password:</string>
    <string name="logout">Logout</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name ="dialog_title"> Delete account  </string>
    <string name ="dialog_message"> Are you sure you want to delete your account? </string>
    <string name="attention">Attention</string>
    <string name="options">Options</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_account">Delete Account</string>
</resources>
